samples/_failures_safe/1761160540_33a62d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79465419.c: In function ‘main’:
./samples/SAFE/__tmp_79465419.c:150:9: error: expected declaration or statement at end of input
  150 |         printf("4. Exit\n");
      |         ^~~~~~
./samples/SAFE/__tmp_79465419.c:150:9: error: expected declaration or statement at end of input
